@@ -1,3 +1,11 @@
+2009-01-19  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
+	2008-07-11  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/36765
+	* gcc.c-torture/execute/pr36765.c: New testcase.
+
 2009-01-17  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38657
